regression: On KDE, Firefox restarts maximized, but changes into a small, then large, non-maximized window
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox74 | --- | unaffected |
firefox75 | --- | unaffected |
firefox76 | --- | fixed |
People
(Reporter: jan, Assigned: stransky)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(2 files)
KDE, X11, Debian Testing, Macbook Pro (WebRender qualified)
KDE Plasma: 5.17.5
KDE Framework: 5.62.0
Qt: 5.12.5
libgtk-3-0: 3.24.14-1
libgtk2.0-0: 2.24.32-4
STR: Open about:restartrequired, maximize window, restart.
Good: Firefox is maximized after restart.
Bad: Firefox is not maximized after restart.
mozregression --good 2020-03-10 --bad 2020-03-22 -a about:restartrequired
24:44.54 INFO: Last good revision: e34098b876a71642a351557eabb6f6ceae826336
24:44.54 INFO: First bad revision: 786ce3bfb9b5c1ee885564a01033320883dca760
24:44.54 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e34098b876a71642a351557eabb6f6ceae826336&tochange=786ce3bfb9b5c1ee885564a01033320883dca760
786ce3bfb9b5c1ee885564a01033320883dca760 Martin Stransky — Bug 1623106 [Linux/Gtk] Don't use window resize workaround for Gtk >= 3.24, r=jhorak
Reporter | ||
Updated•5 years ago
|
Reporter | ||
Updated•5 years ago
|
Comment 1•5 years ago
|
||
Could you attach a Wayland debug log so we can see if it's the compositor or firefox? Something like WAYLAND_DEBUG=1 ./firefox > firefox.log 2>&1
Reporter | ||
Comment 2•5 years ago
|
||
Bug 1623658 is a Wayland followup to bug 1623106.
But this regression is on KDE/X11. (Are they somewhat the same?)
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 3•5 years ago
|
||
BTW. can you test with KDE Plasma: 5.18?
Thanks.
Assignee | ||
Comment 4•5 years ago
|
||
(In reply to Martin Stránský [:stransky] from comment #3)
BTW. can you test with KDE Plasma: 5.18?
Thanks.
Please test only if it's suitable for you, I perhaps also can find a box with KDE Plasma 5.18 somewhere.
Reporter | ||
Comment 5•5 years ago
•
|
||
With last good/first bad revision this bug is not present with KDE/Wayland. It still works as expected.
GDK_BACKEND=wayland mozregression --launch 2020-03-22 -a about:restartrequired
Only X11 and XWayland seem to be affected.
Reporter | ||
Comment 6•5 years ago
|
||
Will test with Ubuntu 20.04 which has Plasma 5.18.
Reporter | ||
Comment 7•5 years ago
|
||
Same behavior and regression range with Plasma 5.18/X11 on Ubuntu 20.04.
First bad: mozregression --repo autoland --launch 786ce3bfb9b5c1ee885564a01033320883dca760 -a about:restartrequired
KDE Plasma: 5.18.3
KDE Framework: 5.67.0
Qt: 5.12.5
libgtk-3-0: 3.24.14-1ubuntu1
libgtk2.0-0: 2.24.32-4ubuntu4
Reporter | ||
Comment 8•5 years ago
|
||
Same behavior and regression range with Plasma 5.18/X11 on Ubuntu 20.04.
It works as expected with Plasma 5.18/Wayland on Ubuntu 20.04. Like on Debian, only X11 and XWayland seem to be affected.
(sudo apt install plasma-workspace-wayland
+ reenable Wayland in /etc/gdm3/custom.conf
)
Assignee | ||
Comment 9•5 years ago
|
||
Okay, let's remove the workaround for Wayland only. I don't have time to investigate why it's still broken on X11.
Assignee | ||
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Description
•