Bug 1624199 [Linux/X11] Use resize workaround on X11 to avoid KDE regression, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D67805

--HG--
extra : moz-landing-system : lando